Don't crash when editing the base currency

Using Tools/Currencies on the selected base currency and hitting Enter
caused a crash. This patch avoids the crash.

BUG: 390658
FIXED-IN: 5.0.1